--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/EditorTemplates/ProductAttribute.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/EditorTemplates/ProductAttribute.cshtml
@@ -4,7 +4,7 @@
     id="ProductAttribute" 
     class="autowidth" 
     style="min-width: 200px"
-    data-select-url='@Url.Action("AllProductVariantAttributes", "ProductVariant")'>
+    data-select-url='@Url.Action("AllProductVariantAttributes", "Product")'>
 </select>
 
 <script>
