--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/List.cshtml
@@ -105,13 +105,13 @@
                     .Columns(columns =>
                     {
                         columns.Bound(x => x.Id)
-                        .Filterable(false)
-                        .Template(x => string.Format("<input type='checkbox' name='checkedRecords' value='{0}' class='checkboxGroups'/>", x.Id))
-                        .ClientTemplate("<input type='checkbox' name='checkedRecords' value='<#= Id #>' class='checkboxGroups'/>")
-                        .Title("<input id='mastercheckbox' type='checkbox'/>")
-                        .Width(50)
-                        .HtmlAttributes(new { style = "text-align:center" })
-                        .HeaderHtmlAttributes(new { style = "text-align:center" });
+                            .Filterable(false)
+                            .Template(x => string.Format("<input type='checkbox' name='checkedRecords' value='{0}' class='checkboxGroups'/>", x.Id))
+                            .ClientTemplate("<input type='checkbox' name='checkedRecords' value='<#= Id #>' class='checkboxGroups'/>")
+                            .Title("<input id='mastercheckbox' type='checkbox'/>")
+                            .Width(50)
+                            .HtmlAttributes(new { style = "text-align:center" })
+                            .HeaderHtmlAttributes(new { style = "text-align:center" });
 
                         if (Model.DisplayProductPictures)
                         {
@@ -127,6 +127,9 @@
                         columns.Bound(x => x.Name)
                             .Template(x => Html.ActionLink(x.Name, "Edit", new { id = x.Id }))
                             .ClientTemplate("<a href='Edit/<#= Id #>'><#= Name #></a>");
+                        columns.Bound(x => x.Sku);
+                        columns.Bound(x => x.Price);
+                        columns.Bound(x => x.StockQuantity);
                         columns.Bound(x => x.Published)
                             .Width(100)
                             .Template(item => @Html.SymbolForBool(item.Published))
@@ -139,60 +142,10 @@
                             .ClientTemplate("<a href=\"Edit/<#= Id #>\">" + T("Admin.Common.Edit").Text + "</a>")
                             .Title(T("Admin.Common.Edit").Text);
                     })
-                    .DetailView(details => details.ClientTemplate(
-                            Html.Telerik().Grid<ProductVariantModel>()
-                            .Name("variants-grid-<#= Id #>")
-                            .Columns(columns =>
-                            {
-                                columns.Bound(pv => pv.Name)
-                                .Template(pv => Html.ActionLink(pv.Name, "Edit", "ProductVariant", new { id = pv.Id }, new { }))
-                                .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/ProductVariant/Edit/") + "<#= Id #>\"><#= Name #></a>");
-                                columns.Bound(pv => pv.Sku).Width(100);
-                                columns.Bound(pv => pv.Price).Width(100);
-                                columns.Bound(pv => pv.StockQuantity).Width(100);
-                                columns.Bound(pv => pv.Published)
-                                    .Width(100)
-                                    .Template(item => @Html.SymbolForBool(item.Published))
-                                    .ClientTemplate(@Html.SymbolForBool("Published"))
-                                    .Centered();
-                            })
-                            .DataBinding(dataBinding => dataBinding.Ajax()
-                                .Select("GetVariants", "Product", new
-                                {
-                                    productId =
-                                        "<#= Id #>"
-                                }))
-                            .ToHtmlString()
-                        )
-                        .Template(
-
-
-                            @<text>
-                            @(Html.Telerik().Grid(item.ProductVariantModels)
-                                                .Name("variants-grid-" + item.Id)
-                                                .Columns(columns =>
-                                                {
-                                                    columns.Bound(pv => pv.Name)
-                                                    .Template(pv => Html.ActionLink(pv.Name, "Edit", "ProductVariant", new { id = pv.Id }, new { }))
-                                                    .ClientTemplate("<a href=\""+ @Url.Content("~/Admin/ProductVariant/Edit/") + "<#= Id #>\"><#= Name #></a>");
-                                                    columns.Bound(pv => pv.Sku).Width(100);
-                                                    columns.Bound(pv => pv.Price).Width(100);
-                                                    columns.Bound(pv => pv.StockQuantity).Width(100);
-                                                    columns.Bound(pv => pv.Published)
-                                                    .Width(100)
-                                                    .Template(pv => pv.Published.ToString().ToLower())
-                                                    .Centered();
-                                                })
-                                        )
-                            </text>
-
-
-                                            )
-                                            )
-                                            .Pageable(settings => settings.Total(Model.Products.Total).PageSize(gridPageSize).Position(GridPagerPosition.Both))
-                                            .DataBinding(dataBinding => dataBinding.Ajax().Select("ProductList", "Product"))
-                                            .ClientEvents(events => events.OnDataBinding("productsGrid_onDataBinding").OnDataBound("productsGrid_onDataBound"))
-                                            .EnableCustomBinding(true))
+                    .Pageable(settings => settings.Total(Model.Products.Total).PageSize(gridPageSize).Position(GridPagerPosition.Both))
+                    .DataBinding(dataBinding => dataBinding.Ajax().Select("ProductList", "Product"))
+                    .ClientEvents(events => events.OnDataBinding("productsGrid_onDataBinding").OnDataBound("productsGrid_onDataBound"))
+                    .EnableCustomBinding(true))
             </td>
         </tr>
     </table>
