--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrder.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrder.cshtml
@@ -98,10 +98,10 @@
     }
 
     function onRowSelected(e) {
-        productVariantID = e.row.cells[0].innerHTML;
-        //load "product variant details page" block
-        var productDetailsActionUrl = '@Html.Raw(Url.Action("AddProductToOrderDetails", "Order", new { orderId = Model.OrderId, productVariantId = "productvariantidplaceholder" }))';
-        productDetailsActionUrl = productDetailsActionUrl.replace("productvariantidplaceholder", productVariantID);
+        productID = e.row.cells[0].innerHTML;
+        //load "product details page" block
+        var productDetailsActionUrl = '@Html.Raw(Url.Action("AddProductToOrderDetails", "Order", new { orderId = Model.OrderId, productId = "productidplaceholder" }))';
+        productDetailsActionUrl = productDetailsActionUrl.replace("productidplaceholder", productID);
         setLocation(productDetailsActionUrl);
     }
 </script>
