--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/NeverSoldReport.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/NeverSoldReport.cshtml
@@ -49,13 +49,13 @@
                         .ClientEvents(events => events.OnDataBinding("onDataBinding"))
                         .Columns(columns =>
                         {
-                            columns.Bound(x => x.ProductVariantFullName)
-                               .Template(x => Html.ActionLink(@T("Admin.Common.View").Text, "Edit", "ProductVariant", new { id = x.ProductVariantId }, new { }))                                
-                               .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/ProductVariant/Edit/") + "<#= ProductVariantId #>\">" + "<#= ProductVariantFullName #>\">" + "</a>");
+                            columns.Bound(x => x.ProductName)
+                               .Template(x => Html.ActionLink(@T("Admin.Common.View").Text, "Edit", "Product", new { id = x.ProductId }, new { }))                                
+                               .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Product/Edit/") + "<#= ProductId #>\">" + "<#= ProductName #>\">" + "</a>");
                     
-                            columns.Bound(x => x.ProductVariantId)
-                                .Template(x => Html.ActionLink(@T("Admin.Common.View").Text, "Edit", "ProductVariant", new { id = x.ProductVariantId }, new { }))
-                                .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/ProductVariant/Edit/") + "<#= ProductVariantId #>\">" + T("Admin.Common.View").Text + "</a>")
+                            columns.Bound(x => x.ProductId)
+                                .Template(x => Html.ActionLink(@T("Admin.Common.View").Text, "Edit", "Product", new { id = x.ProductId }, new { }))
+                                .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Product/Edit/") + "<#= ProductId #>\">" + T("Admin.Common.View").Text + "</a>")
                                 .Width(50)
                                 .Centered()
                                 .Title(T("Admin.Common.View").Text);
@@ -82,9 +82,9 @@
 
     function onDataBinding(e) {
         var searchModel = {
-                StartDate: $('#@Html.FieldIdFor(model => model.StartDate)').val(),
-                EndDate: $('#@Html.FieldIdFor(model => model.EndDate)').val()
-                };
+            StartDate: $('#@Html.FieldIdFor(model => model.StartDate)').val(),
+            EndDate: $('#@Html.FieldIdFor(model => model.EndDate)').val()
+        };
         e.data = searchModel;
     }
 
