--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/AttributeCombinationEditPopup.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/AttributeCombinationEditPopup.cshtml
@@ -4,18 +4,18 @@
 @model ProductVariantAttributeCombinationModel
 @{    
     //page title
-    ViewBag.Title = T("Admin.Catalog.Products.Variants.ProductVariantAttributes.AttributeCombinations.AddTitle").Text;
+    ViewBag.Title = T("Admin.Catalog.Products.Variants.ProductVariantAttributes.AttributeCombinations.EditTitle").Text;
 }
 
 @*we add enctype = "multipart/form-data" because "File upload" attribute control type requries it*@
-@using (Html.BeginForm("AttributeCombinationCreatePopup", "ProductVariant",
-    new RouteValueDictionary(new { productVariantId = Model.ProductVariantId, btnId = ViewBag.btnId, formId = ViewBag.formId }),
+@using (Html.BeginForm("AttributeCombinationEditPopup", "Product",
+    new RouteValueDictionary(new { productId = Model.ProductId, btnId = ViewBag.btnId, formId = ViewBag.formId }),
     FormMethod.Post,
     new Dictionary<string, Object> { { "enctype", "multipart/form-data" } }))
 {
     <div class="section-header">
         <div class="title">
-            @T("Admin.Catalog.Products.Variants.ProductVariantAttributes.Attributes.Values.AddNew")
+            @T("Admin.Catalog.Products.Variants.ProductVariantAttributes.AttributeCombinations.EditTitle")
         </div>
         <div class="options">
             <button type="submit" id="save" name="save" value="save" class="btn btn-primary">
