--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/EditAttributeValues.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/EditAttributeValues.cshtml
@@ -1,6 +1,8 @@
-﻿@model ProductVariantModel.ProductVariantAttributeValueListModel
+﻿@model ProductModel.ProductVariantAttributeValueListModel
 
 @using Telerik.Web.Mvc.UI;
+@using SmartStore.Web.Framework.UI;
+
 @{    
     //page title
     ViewBag.Title = string.Format(T("Admin.Catalog.Products.Variants.ProductVariantAttributes.Attributes.Values.EditAttributeDetails").Text, Model.ProductVariantAttributeName, Model.ProductVariantName);
@@ -10,7 +12,7 @@
 <div class="section-header">
     <div class="title">
         @string.Format(T("Admin.Catalog.Products.Variants.ProductVariantAttributes.Attributes.Values.EditAttributeDetails").Text, Model.ProductVariantAttributeName, Model.ProductVariantName)
-        @Html.ActionLink("(" + T("Admin.Catalog.Products.Variants.ProductVariantAttributes.Attributes.Values.BackToProductVariant") + ")", "Edit", "ProductVariant", new { Id = Model.ProductVariantId }, null)
+        @Html.ActionLink("(" + T("Admin.Catalog.Products.Variants.ProductVariantAttributes.Attributes.Values.BackToProductVariant") + ")", "Edit", "Product", new { Id = Model.ProductId }, null)
     </div>
     <div class="options">
     </div>
@@ -18,7 +20,7 @@
 <table class="adminContent">
     <tr>
         <td>
-            @(Html.Telerik().Grid<ProductVariantModel.ProductVariantAttributeValueModel>()
+            @(Html.Telerik().Grid<ProductModel.ProductVariantAttributeValueModel>()
                             .Name("pvav-grid")
                             .DataKeys(x =>
                             {
@@ -73,7 +75,7 @@
                                 columns.Bound(x => x.Id)
                                     .Width(50)
                                     .Centered()
-                                    .ClientTemplate("<input type='submit' value='" + @T("Admin.Common.Edit").Text + "' onclick=\"" + "javascript:OpenWindow('" + @Url.Content("~/Admin/ProductVariant/ProductAttributeValueEditPopup/") + "<#= Id #>?btnId=btnRefresh&formId=productvariantattribute-form', 800, 350, true); return false;\" class='t-button' />")
+                                    .ClientTemplate("<input type='submit' value='" + @T("Admin.Common.Edit").Text + "' onclick=\"" + "javascript:OpenWindow('" + @Url.Content("~/Admin/Product/ProductAttributeValueEditPopup/") + "<#= Id #>?btnId=btnRefresh&formId=productvariantattribute-form', 800, 350, true); return false;\" class='t-button' />")
                                     .Title(T("Admin.Common.Edit").Text);
                                 columns.Command(commands =>
                                 {
@@ -82,16 +84,16 @@
                                 .Width(50)
                                 .Title(T("Admin.Common.Delete").Text);
                             })
-                                                                            .DataBinding(dataBinding =>
-                                                                                dataBinding.Ajax()
-                                                                                .Select("ProductAttributeValueList", "ProductVariant", new { productVariantAttributeId = Model.ProductVariantAttributeId })
-                                                                                .Delete("ProductAttributeValueDelete", "ProductVariant"))
-                                                                            .EnableCustomBinding(true))
+                            .DataBinding(dataBinding =>
+                                dataBinding.Ajax()
+                                .Select("ProductAttributeValueList", "Product", new { productVariantAttributeId = Model.ProductVariantAttributeId })
+                                .Delete("ProductAttributeValueDelete", "Product"))
+                            .EnableCustomBinding(true))
         </td>
     </tr>
     <tr>
         <td style="padding-top: 12px">
-            <button class="btn btn-primary" type="submit" id="btnAddNewValue" name="btnAddNewValue" value="btnAddNewValue" onclick="javascript:OpenWindow('@(Url.Action("ProductAttributeValueCreatePopup", "ProductVariant", new { productAttributeAttributeId = Model.ProductVariantAttributeId, btnId = "btnRefresh", formId = "productvariantattribute-form" }))', 800, 350, true); return false;">
+            <button class="btn btn-primary" type="submit" id="btnAddNewValue" name="btnAddNewValue" value="btnAddNewValue" onclick="javascript:OpenWindow('@(Url.Action("ProductAttributeValueCreatePopup", "Product", new { productAttributeAttributeId = Model.ProductVariantAttributeId, btnId = "btnRefresh", formId = "productvariantattribute-form" }))', 800, 350, true); return false;">
                 <i class="icon-plus"></i>
                 @T("Admin.Catalog.Products.Variants.ProductVariantAttributes.Attributes.Values.AddNew")
             </button>
