--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdateProductAttributeValue.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdateProductAttributeValue.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProductVariantModel.ProductVariantAttributeValueModel
+﻿@model ProductModel.ProductVariantAttributeValueModel
 
 @using Telerik.Web.Mvc.UI;
 
@@ -16,7 +16,7 @@
     </script>
 }
 
-@(Html.LocalizedEditor<ProductVariantModel.ProductVariantAttributeValueModel, ProductVariantModel.ProductVariantAttributeValueLocalizedModel>("productattributevalue-localized",
+@(Html.LocalizedEditor<ProductModel.ProductVariantAttributeValueModel, ProductModel.ProductVariantAttributeValueLocalizedModel>("productattributevalue-localized",
 @<table class="adminContent">
     <tr>
         <td class="adminTitle">
