--- a/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/List.cshtml
@@ -24,8 +24,8 @@
                     {
 						columns.Bound(x => x.Id);
                         columns.Bound(x => x.ProductName)
-                           .Template(x => Html.ActionLink(x.ProductName, "Edit", "ProductVariant", new { id = x.ProductVariantId }, new { }))
-                           .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/ProductVariant/Edit/") + "<#= ProductVariantId #>\"><#= ProductName #></a>");
+                           .Template(x => Html.ActionLink(x.ProductName, "Edit", "Product", new { id = x.ProductId }, new { }))
+                           .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Product/Edit/") + "<#= ProductId #>\"><#= ProductName #></a>");
                         columns.Bound(x => x.Quantity)
                             .Centered();
                         columns.Bound(x => x.CustomerId)
