--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrder.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrder.cshtml
@@ -52,7 +52,7 @@
     </tr>
     <tr>
         <td>
-            @(Html.Telerik().Grid<OrderModel.AddOrderProductModel.ProductVariantLineModel>()
+            @(Html.Telerik().Grid<OrderModel.AddOrderProductModel.ProductModel>()
                     .Name("products-grid")
                     .Columns(columns =>
                     {
@@ -68,7 +68,7 @@
         </td>
     </tr>
 </table>
-<div id="productvariantdetails">
+<div id="productdetails">
 </div>
 @Html.HiddenFor(model => Model.OrderId)
 <script type="text/javascript">
