--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/EditorTemplates/TierPriceCustomer.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/EditorTemplates/TierPriceCustomer.cshtml
@@ -3,7 +3,7 @@
     name="CustomerRole" 
     id="CustomerRole" 
     style="width: 95%"
-    data-placeholder='@T("Admin.Catalog.Products.Variants.TierPrices.Fields.CustomerRole.AllRoles")'
+    data-placeholder='@T("Admin.Catalog.Products.TierPrices.Fields.CustomerRole.AllRoles")'
     data-select-url='@Url.Action("AllCustomerRoles", "Customer")'>
 </select>
 
