--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/ProductAttributeValueEditPopup.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/ProductAttributeValueEditPopup.cshtml
@@ -4,13 +4,13 @@
 @model ProductModel.ProductVariantAttributeValueModel
 @{    
     //page title
-    ViewBag.Title = T("Admin.Catalog.Products.Variants.ProductVariantAttributes.Attributes.Values.EditValueDetails").Text;
+    ViewBag.Title = T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.EditValueDetails").Text;
 }
 @using (Html.BeginForm())
 {
     <div class="section-header">
         <div class="title">
-            @T("Admin.Catalog.Products.Variants.ProductVariantAttributes.Attributes.Values.EditValueDetails")
+            @T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.EditValueDetails")
         </div>
         <div class="options">
             <button type="submit" name="save" value="save" class="btn btn-primary">
