--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/AttributeCombinationEditPopup.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/AttributeCombinationEditPopup.cshtml
@@ -4,7 +4,7 @@
 @model ProductVariantAttributeCombinationModel
 @{    
     //page title
-    ViewBag.Title = T("Admin.Catalog.Products.Variants.ProductVariantAttributes.AttributeCombinations.EditTitle").Text;
+    ViewBag.Title = T("Admin.Catalog.Products.ProductVariantAttributes.AttributeCombinations.EditTitle").Text;
 }
 
 @*we add enctype = "multipart/form-data" because "File upload" attribute control type requries it*@
@@ -15,7 +15,7 @@
 {
     <div class="section-header">
         <div class="title">
-            @T("Admin.Catalog.Products.Variants.ProductVariantAttributes.AttributeCombinations.EditTitle")
+            @T("Admin.Catalog.Products.ProductVariantAttributes.AttributeCombinations.EditTitle")
         </div>
         <div class="options">
             <button type="submit" id="save" name="save" value="save" class="btn btn-primary">
