--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/BulkEdit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/BulkEdit.cshtml
@@ -57,7 +57,7 @@
         .Name("products-grid")
         .DataKeys(keys =>
         {
-            keys.Add(pv => pv.Id);
+            keys.Add(p => p.Id);
         })
         .ToolBar(commands =>
         {
@@ -70,15 +70,15 @@
         )
         .Columns(columns =>
         {
-            columns.Bound(pv => pv.Name).ReadOnly().Width(300)
-                .Template(pv => Html.ActionLink(pv.Name, "Edit", new { id = pv.Id }))
+            columns.Bound(p => p.Name).ReadOnly().Width(300)
+                .Template(p => Html.ActionLink(p.Name, "Edit", new { id = p.Id }))
                 .ClientTemplate("<a href='Edit/<#= Id #>'><#= Name #></a>");
-            columns.Bound(pv => pv.Sku).Width(100);
-            columns.Bound(pv => pv.Price).Width(100);
-            columns.Bound(pv => pv.OldPrice).Width(100);
-            columns.Bound(pv => pv.ManageInventoryMethod).ReadOnly().Width(150);
-            columns.Bound(pv => pv.StockQuantity).Width(100);
-            columns.Bound(pv => pv.Published).Width(100);
+            columns.Bound(p => p.Sku).Width(100);
+            columns.Bound(p => p.Price).Width(100);
+            columns.Bound(p => p.OldPrice).Width(100);
+            columns.Bound(p => p.ManageInventoryMethod).ReadOnly().Width(150);
+            columns.Bound(p => p.StockQuantity).Width(100);
+            columns.Bound(p => p.Published).Width(100);
             columns.Command(commands => commands.Delete().Localize(T)).Width(50);
             columns.Bound(x => x.Id)
                 .ReadOnly()
