--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.cshtml
@@ -242,7 +242,7 @@
                         @if (!Model.AddToCart.DisableWishlistButton)
                         {
                         <div>
-                            <a data-href='@Url.RouteUrl("AddProductVariantToCart", new { productId = Model.Id, shoppingCartTypeId = (int)ShoppingCartType.Wishlist })'
+                            <a data-href='@Url.RouteUrl("AddProductToCart-Details", new { productId = Model.Id, shoppingCartTypeId = (int)ShoppingCartType.Wishlist })'
                                 href="#"
                                 class="ajax-cart-link" 
                                 data-form-selector="#product-details-form"
