--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductVariantAddToCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductVariantAddToCart.cshtml
@@ -120,7 +120,7 @@
                 {
                     <a class="btn btn-warning add-to-cart-button ajax-cart-link" 
                         href="#"
-                        data-href='@Url.RouteUrl("AddProductVariantToCart", new { productId = Model.AddToCart.ProductId, shoppingCartTypeId = (int)ShoppingCartType.ShoppingCart })' 
+                        data-href='@Url.RouteUrl("AddProductToCart-Details", new { productId = Model.AddToCart.ProductId, shoppingCartTypeId = (int)ShoppingCartType.ShoppingCart })' 
                         data-form-selector="#product-details-form"
                         data-type="cart"
                         data-action="add">
