--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Grouped.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Grouped.Mobile.cshtml
@@ -10,17 +10,6 @@
     //title
     Html.AddTitleParts(!String.IsNullOrEmpty(Model.MetaTitle) ? Model.MetaTitle : Model.Name);
 }
-@{
-    //errors
-    var errors = new List<string>();
-    foreach (var modelState in ViewData.ModelState.Values)
-    {
-        foreach (var error in modelState.Errors)
-        {
-            errors.Add(error.ErrorMessage);
-        }
-    }
-}
 <div class="page product-details-page">
     <div class="page-body">
         @Html.Widget("mobile_productdetails_top")
@@ -32,17 +21,6 @@
                     <h1 class="product-name">
                         @Model.Name
                     </h1>
-                    @if (errors.Count > 0)
-                    { 
-                        <div class="message-error">
-                            <ul>
-                                @for (int i = 0; i < errors.Count; i++)
-                                {
-                                    <li>@errors[i]</li>
-                                }
-                            </ul>
-                        </div>
-                    }
                     <div class="short-description">
                         @Html.Raw(Model.ShortDescription)
                     </div>
@@ -63,10 +41,48 @@
             <div class="product-collateral">
                 <div class="product-variant-list">
                     @foreach (var variant in Model.AssociatedProducts)
-                    {
-                        var dataDictVariant = new ViewDataDictionary();
-                        dataDictVariant.TemplateInfo.HtmlFieldPrefix = string.Format("variant_{0}", variant.Id);
-                        @Html.Partial("_ProductTemplate.Grouped.AssociatedProduct", variant, dataDictVariant)
+                    {                       
+                        <div class="product-variant-line" data-productid="@Model.Id">
+                            @if (!String.IsNullOrWhiteSpace(Model.DetailsPictureModel.DefaultPictureModel.ImageUrl))
+                            {
+                                <div class="variant-picture">
+                                    <img alt="@Model.DetailsPictureModel.AlternateText" src="@Model.DetailsPictureModel.DefaultPictureModel.ImageUrl" 
+                                         title="@Model.DetailsPictureModel.DefaultPictureModel.Title" />
+                                </div>
+                            }
+                            @if (!String.IsNullOrWhiteSpace(Model.Name))
+                            {
+                                <div class="variant-name">
+                                    @Model.Name
+                                </div>
+                            }
+                            @Html.Partial("_DownloadSample", Model)
+                            @Html.Action("ProductTierPrices", "Catalog", new { productId = Model.Id })
+                            @{
+                                var dataDictAttributes = new ViewDataDictionary();
+                                dataDictAttributes.TemplateInfo.HtmlFieldPrefix = string.Format("attributes_{0}", Model.Id);
+                                @Html.Partial("_ProductAttributes", Model.ProductVariantAttributes, dataDictAttributes)                  
+                            }
+                            <!--product SKU, manufacturer part number, stock info-->
+                            @Html.Partial("_SKU_Man_Stock", Model)
+                            <!--Back in stock subscription-->
+                            @Html.Partial("_ProductVariantBackInStockSubscription", Model)
+                            @{
+                                var dataDictGiftCard = new ViewDataDictionary();
+                                dataDictGiftCard.TemplateInfo.HtmlFieldPrefix = string.Format("giftcard_{0}", Model.Id);
+                                @Html.Partial("_GiftCardInfo", Model.GiftCard, dataDictGiftCard)
+                            }
+                            @{
+                                var dataDictPrice = new ViewDataDictionary();
+                                dataDictPrice.TemplateInfo.HtmlFieldPrefix = string.Format("price_{0}", Model.Id);
+                                @Html.Partial("_ProductVariantPrice", Model.ProductPrice, dataDictPrice)
+                            }
+                            @{
+                                var dataDictAddToCart = new ViewDataDictionary();
+                                dataDictAddToCart.TemplateInfo.HtmlFieldPrefix = string.Format("addtocart_{0}", Model.Id);
+                                @Html.Partial("_ProductVariantAddToCart", Model.AddToCart, dataDictAddToCart)
+                            }
+                        </div>
                     }
                 </div>
                 @Html.Action("ProductSpecifications", "Catalog", new { productId = Model.Id })
