--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.Mobile.cshtml
@@ -1,4 +1,90 @@
 ﻿@model ProductDetailsModel
 @using SmartStore.Web.Models.Catalog;
-@*render 'Simple product' template the same way as 'Grouped product' *@
-@Html.Partial("ProductTemplate.Grouped", Model)
+@{
+    Layout = "~/Views/Shared/_Root.cshtml";
+
+    //title
+    Html.AddTitleParts(!String.IsNullOrEmpty(Model.MetaTitle) ? Model.MetaTitle : Model.Name);
+}
+<div class="page product-details-page">
+    <div class="page-body">
+        @Html.Widget("mobile_productdetails_top")
+        @*we add enctype = "multipart/form-data" because "File upload" attribute control type requries it*@
+        @using (Html.BeginRouteForm("Product", new { SeName = Model.SeName }, FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
+            <div class="product-essential">
+                <div class="overview">
+                    <h1 class="product-name">
+                        @Model.Name
+                    </h1>
+                    <div class="short-description">
+                        @Html.Raw(Model.ShortDescription)
+                    </div>
+                    @Html.Widget("mobile_productdetails_before_pictures")
+                    <div id="pd-gallery-container">
+                        @Html.Partial("_ProductDetailsPictures", Model.DetailsPictureModel)
+                    </div>
+                    @Html.Widget("mobile_productdetails_after_pictures")
+                    @Html.Action("ProductManufacturers", "Catalog", new { productId = Model.Id })
+                    @Html.Action("ProductReviewOverview", "Catalog", new { productId = Model.Id })
+                    @Html.Action("ProductEmailAFriendButton", "Catalog", new { productId = Model.Id })
+                    @Html.Action("CompareProductsButton", "Catalog", new { productId = Model.Id })
+                </div>
+                <div class="full-description">
+                    @Html.Raw(Model.FullDescription)
+                </div>
+            </div>
+            <div class="product-collateral">
+                <div class="product-variant-list">
+                    @foreach (var variant in Model.AssociatedProducts)
+                    {
+                        <div class="product-variant-line" data-productid="@Model.Id">
+                            @if (!String.IsNullOrWhiteSpace(Model.DetailsPictureModel.DefaultPictureModel.ImageUrl))
+                            {
+                                <div class="variant-picture">
+                                    <img alt="@Model.DetailsPictureModel.AlternateText" src="@Model.DetailsPictureModel.DefaultPictureModel.ImageUrl"
+                                         title="@Model.DetailsPictureModel.DefaultPictureModel.Title" />
+                                </div>
+                            }
+                            @Html.Partial("_DownloadSample", Model)
+                            @Html.Action("ProductTierPrices", "Catalog", new { productId = Model.Id })
+                            @{
+                                var dataDictAttributes = new ViewDataDictionary();
+                                dataDictAttributes.TemplateInfo.HtmlFieldPrefix = string.Format("attributes_{0}", Model.Id);
+                                @Html.Partial("_ProductAttributes", Model.ProductVariantAttributes, dataDictAttributes)
+                            }
+                            <!--product SKU, manufacturer part number, stock info-->
+                            @Html.Partial("_SKU_Man_Stock", Model)
+                            <!--Back in stock subscription-->
+                            @Html.Partial("_ProductVariantBackInStockSubscription", Model)
+                            @{
+                                var dataDictGiftCard = new ViewDataDictionary();
+                                dataDictGiftCard.TemplateInfo.HtmlFieldPrefix = string.Format("giftcard_{0}", Model.Id);
+                                @Html.Partial("_GiftCardInfo", Model.GiftCard, dataDictGiftCard)
+                            }
+                            @{
+                                var dataDictPrice = new ViewDataDictionary();
+                                dataDictPrice.TemplateInfo.HtmlFieldPrefix = string.Format("price_{0}", Model.Id);
+                                @Html.Partial("_ProductVariantPrice", Model.ProductPrice, dataDictPrice)
+                            }
+                            @{
+                                var dataDictAddToCart = new ViewDataDictionary();
+                                dataDictAddToCart.TemplateInfo.HtmlFieldPrefix = string.Format("addtocart_{0}", Model.Id);
+                                @Html.Partial("_ProductVariantAddToCart", Model.AddToCart, dataDictAddToCart)
+                            }
+                        </div>
+                    }
+                </div>
+                @Html.Action("ProductSpecifications", "Catalog", new { productId = Model.Id })
+                <div class="clear">
+                </div>
+                @Html.Action("ProductTags", "Catalog", new { productId = Model.Id })
+                <div class="clear">
+                </div>
+                @Html.Action("ProductsAlsoPurchased", "Catalog", new { productId = Model.Id })
+                @Html.Action("RelatedProducts", "Catalog", new { productId = Model.Id })
+            </div>
+        }
+        @Html.Widget("mobile_productdetails_bottom")
+    </div>
+</div>
