--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.cshtml
@@ -157,7 +157,7 @@
                             <tr valign="top">
                                 <td>&nbsp;</td>
                                 <td>
-                                    @Html.Partial("_ProductVariantBackInStockSubscription", Model)
+                                    @Html.Partial("_BackInStockSubscription", Model)
                                 </td>
                             </tr>
                             }
@@ -221,7 +221,7 @@
                         @{       
                             var dataDictAddToCart = new ViewDataDictionary();
                             dataDictAddToCart.TemplateInfo.HtmlFieldPrefix = string.Format("addtocart_{0}", Model.Id);                
-                            @Html.Partial("_ProductVariantAddToCart", Model, dataDictAddToCart)                    
+                            @Html.Partial("_AddToCart", Model, dataDictAddToCart)                    
                         }
 
                     <!-- quick links -->
