--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductTemplate.Grouped.AssociatedProduct.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductTemplate.Grouped.AssociatedProduct.cshtml
@@ -196,7 +196,7 @@
             @{
                 var dataDictAddToCart = new ViewDataDictionary();
                 dataDictAddToCart.TemplateInfo.HtmlFieldPrefix = string.Format("addtocart_{0}", Model.Id);
-                @Html.Partial("_ProductVariantAddToCart", Model, dataDictAddToCart)
+                @Html.Partial("_AddToCart", Model, dataDictAddToCart)
             }
         </div>
     </div>
