Perf (for larger category amount): massively increased category breadcrumb load time by converting the categories result set into a local dictionary. Affects many backend views and frontend search view.

--- a/src/Presentation/SmartStore.Web/Views/Catalog/Search.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Search.cshtml
@@ -81,7 +81,7 @@
                             <div class="control-group">
                                 @Html.LabelFor(model => model.Cid, new { @class="control-label" , @for="Q" })
                                 <div class="controls">
-                                    @Html.DropDownListFor(model => model.Cid, Model.AvailableCategories, new { @class = "noskin" })
+                                    @Html.DropDownListFor(model => model.Cid, Model.AvailableCategories, new { @class = "noskin", style = "max-width: 100%" })
                                 </div>
                             </div>
                             
