--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/AddShipment.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/AddShipment.cshtml
@@ -65,7 +65,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Model.Products)
+                        @foreach (var item in Model.Items)
                         {
                             <tr>
                                 <td style="width: 50%;">
