--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentDetails.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentDetails.cshtml
@@ -96,7 +96,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Model.Products)
+                        @foreach (var item in Model.Items)
                         {
                             <tr>
                                 <td style="width: 70%;">
